--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenAPI Linter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h2>OpenAPI Linter</h2>
+        <label for="fileInput">Choose a file:</label>
         <input type="file" id="fileInput" accept=".yaml,.yml,.json">
         <textarea id="specInput" placeholder="Or paste your OpenAPI spec here..."></textarea>
         <button id="lintButton">Lint Spec</button>
         <textarea id="lintResults" readonly placeholder="Linting results will appear here..."></textarea>
     </div>
-    <script src="../dist/bundle.js"></script>
+    <script type="module" src="bundle.js"></script>
 </body>
 </html>
