--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
         <button id="lintButton">Lint Spec</button>
         <textarea id="lintResults" readonly placeholder="Linting results will appear here..."></textarea>
     </div>
-    <script src="../dist/bundle.js"></script>
+    <script type="module" src="bundle.js"></script>
 </body>
 </html>
