--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>OpenAPI Linter</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="header-container">
-            <a href="./index.html"><img src="./images/logo.png" alt="Logo" style="height: 150px; width: 50px; margin: 10px;"></a>
+            <a href="./index.html"><img src="./images/logo.png" alt="Logo"
+                    style="height: 150px; width: 50px; margin: 10px;"></a>
             <nav>
                 <ul>
                     <li><a href="#rules">Rules</a></li>
@@ -19,7 +22,8 @@
         </div>
     </header>
     <div class="intro">
-        <p>This tool allows you to lint your OpenAPI specifications. Upload a file or paste your spec in the text area.</p>
+        <p>This tool allows you to lint your OpenAPI specifications. Upload a file or paste your spec in the text area.
+        </p>
     </div>
     <div class="container">
         <div class="left-column">
@@ -35,4 +39,5 @@
     </footer>
     <script type="module" src="bundle.js"></script>
 </body>
+
 </html>
