--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
         </div>
     </header>
     <div class="intro">
-        <p>This tool allows you to lint your OpenAPI specifications. Upload a file or paste your spec in the text area.</p>
+        <h2>Qualtrics Custom OAS Linter</h2><br>
+        <p>This tool allows you to lint your OpenAPI specifications (OAS). Upload a file or paste your spec in the text area.</p>
     </div>
     <div class="action-container">
         <input type="file" id="fileInput" accept=".yaml,.yml,.json">
