--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>OpenAPI Linter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../public/style.css">
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+    <script src="../public/htmx.min.js"></script>
 </head>
 
 <body>
     <header>
         <div class="header-container">
-            <a href="./index.html"><img src="./logo.jpg" alt="Logo"
+            <a href="./index.html"><img src="../public/logo.jpg" alt="Logo"
                     style="height: 43px; width: 150px; margin: 10px;"></a>
             <nav>
                 <ul>
